# euracom

./: CHANGES  Makefile  Makefile.in  README.1st  README.html  README.msql  TODO  autoconf.h.in  avon.c  avon.pl  callerid.agi  charger.c  charger.pl  cidlookup.pl  config.h  config.h.in  configure  configure.in  database.c  do_charger.sh  euracom.8  euracom.c  euracom.h  euracom.spec  geb2pg.pl  generate_msql_tables.sql  generate_mysql_tables.sql  generate_tables.sql  log.c  log.h  mkdbs.c  msql.c  mysql.c  postgres.c  prefixmatch.c  privilege.c  privilege.h  serial.c  tel-utils.pm  utils.c  (+1 more)
